# ParaSure

./: .gitignore  README.md  paramsure  paramsure.example.json  pyproject.toml
data/product_params/: 万象-SOC安全运营平台招标参数.xlsx  云图-互联网攻击面管理平台招标参数.xlsx  全悉-全流量威胁检测产品招标参数.xlsx  慧鉴-智能源代码审计产品招标参数.xlsx  无锋-自动化渗透测试平台招标参数.xlsx  洞鉴-资产风险评估系统招标参数.xlsx  牧云-主机安全产品招标参数 .xlsx  码力AISecCoding-智能开发安全一体化平台招标参数.xlsx  鉴微-漏洞管理平台招标参数.xlsx  长亭API安全网关产品招标参数.xlsx  长亭终端统一管控与安全检测响应平台(DDR)招投标参数.xlsx  雷池- Web应用防火墙招标参数.xlsx
data/web_playbooks/: leichi.json
src/paramsure/: __init__.py  agent.py  bootstrap.py  cli.py  config.py  context.py  decision.py  evidence_judge.py  excel_io.py  llm.py  memory.py  models.py  nl_input.py  pipeline.py  prompts.py  retriever.py  store.py  text.py  tools.py  verifier.py  web_models.py  web_playbook.py  web_runner.py  workflow.py
tests/: test_bootstrap.py  test_cli.py  test_config_memory_tools.py  test_llm.py  test_pipeline.py  test_text.py  test_v2_workflow.py  test_verifier.py  test_web_verification_v3.py
